<resources>
    <string name="app_name">Tabata timer</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="create_ACC">Sig up</string>
    <string name="login">Login</string>
    <string name="sigup">Do no have an account?Sign up!</string>
    <string name="activity_sigup_createAccount_string">Already have an account?Log in!</string>
    <string name="hint_password">Password</string>
    <string name="hint_emailAddress">Email Address</string>
    <string name="hint_re_emailAddress">Re-Enter Password</string>
    <string name="emptyMessage">Required</string>
    <string name="notAemail">Is not a email.</string>
    <string name="passwordErrorMessage">The password should be longer than 6 unit.Can include number and letter.</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="sigupactivity_password_not_match_error">Two password are not match</string>

    <!--preference_name_string-->
    <string name="preference_name_key">pkeyName</string>
    <string name="preference_name_title">User name</string>
    <string name="preference_name_dialogTitle">Input your name</string>
    <string name="preference_name_defaultvalue">user</string>

    <!--preference_Notification on off_string-->
    <string name="preference_nof_key">pkeyNOF</string>
    <string name="preference_nof_title">Notification ON/OFF</string>
    <string name="preference_nofe_defaultvalue">false</string>

    <!--preference_timePick_string-->
    <string name="preference_timePick_key">pleyTimPick</string>
    <string name="preference_timePick_title">Notification time</string>
    <string name="preference_timePick_defaultvalue">00:00</string>

    <!--preference_Lagout_string-->

    <string name="preference_logout_title">Logout</string>


    <!--preference_uploadPicture_string-->
    <string name="preference_uploadPicture_url">gs://tabata-timer-capstone.appspot.com</string>

    <!--upload picture unsuccess message-->
    <string name="unSuccessUploadMessage">Upload unsuccess.Please check your Internet connection.</string>

    <!--upload picture unsuccess message,because no ogin-->
    <string name="unSuccessUploadMessageNoSigin">Upload unsuccess.Please Login again.</string>

    <!--Key of save the profile picture dowload link in Sharepreference-->
    <string name="SharePreferenceDownloadLinkKey">spDownloadLinkKey</string>

    <!--Key of save the email-->
    <string name="sharedpreference_email_key">spemailKey</string>

    <!--Key of save the password-->
    <!--<string name="sharedPreference_password_key">sppasswordKey</string>-->

    <!--Key of save the auto-->
    <!--<string name="sharedPreference_autologin_key">spautoLogin</string>-->

    <!--Name of SharedPreference-->
    <string name="name_sharepreference">TimerPreferenceName</string>

    <!--Setting Activity title-->
    <string name="title_settingActivity">Setting</string>
    <!--the URL  use in Image store in Firemase-->

    <!--String in timerFragment layout-->
    <string name="string_pause">Pause</string>
    <string name="string_action">Action</string>
    <string name="timer_startnumber">00:00</string>
    <string name="bt_start">Start</string>
    <string name="bt_start_pause">Pause</string>
    <string name="bt_reset">Reset</string>

    <string name="bundle_key_action">bka</string>
    <string name="bundle_key_pause">bkp</string>
    <string name="bundle_key_count">bkc</string>
    <string name="bundle_key_isPauseTimer">bkisat</string>
    <string name="bundle_key_totaltime">bktt</string>

    <string name="timer_fragment_sharedPreference_name">spName_timerFragment</string>
    <string name="sharedpreferencekey_action">spAction</string>
    <string name="sharedpreferencekey_pause">spPause</string>
    <string name="sharedpreferencekey_count">spCount</string>
    <string name="sharedpreferencekey_totaltime">sptttime</string>
    <string name="sharedpreferencekey_isPauseTimerON">spPausetimeron</string>
    <string name="sharedpreferencekey_isStartButton">spstartButton</string>


    <string name="imageStoreURL">Hello blank fragment</string>
    <string name="preference_uploadPicture_title">Profile Picture</string>
    <string name="bt_lagout_string">Logout</string>

    <string name="fragment_ime2v_cycles_string">cycles</string>
    <string name="fragment_ime2v_totaltime_string">total time</string>

    <!--TimerFragment -->
    <string name="timerFragment_action">action</string>
    <string name="timerFragment_rest">rest</string>


    <!--Timer activity to Congratulation key-->
    <string name="timerFragment_CongratulationBundleKey">TCBK</string>

    <!--fragment_dialogfragment string-->
    <string name="dialogFragment_finish">Finish!!</string>
    <string name="dialogFragment_finish_time">Finish Time:</string>
    <string name="dialogFragment_total_time">Total Time(s):</string>
    <string name="dialogFragment_button_cancel">Cancel</string>
    <string name="dialogFragment_button_save">Save</string>

    <!--detail dialog cell string-->
    <string name="detail_cell_date">Date:</string>
    <string name="detail_dialog_Total">Total(s):</string>
    <string name="detail_dialog_finish">Finish time:</string>

    <!--sig up activity -->
    <string name="sigup_activity_sigup_success">Sigup success!</string>




    <!--ranl cell string-->
    <string name="rank_cell_hours">Hours</string>
    <string name="rank_cell_minutes">Minutes</string>
    <string name="rank_cell_seconds">Seconds</string>

    <!--Logout activity-->
    <string name="logout_activity_Logout_button_text">Logout</string>
    <string name="logout_activity_Cancel_button_text">Cancel</string>
    <string name="logout_activity_dialog_title">Warning!</string>
    <string name="logout_activity_dialog_Message">Logout will delete your all sport records and user information form the phone. </string>

    <!--fragment rank-->
    <string name="emptyView_message">Can not get the user data!</string>

    <!--ranking page-->
    <string name="radio_button_total_text">Sport total time</string>
    <string name="radio_button_need_encouragement_text">Need encouragement</string>
    <string name="appwidget_text">00:00:00</string>



    <!--Admob-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Notification-->
    <string name="notifiaction_title">Tabata Timer</string>
    <string name="notifiaction_text">It is time to do tabata</string>
    <!--ContentDescription-->
    <string name="cd_login_button">This is a login button</string>

    <string name="cd_ranking_tab">This is a ranking page</string>
    <string name="cd_timer_tab">This isTimer</string>
    <string name="cd_calcender_tab">This is a login button</string>
    <string name="cd_received_message_tab">This is received message </string>

    <string name="cd_sigup_button">This is a sigup button</string>

    <string name="cd_start_button">This is a timer start button</string>
    <string name="cd_reset_button">This is a timer reset button</string>

    <string name="cd_rank_sort_hightt">Sort by Higher sport total time</string>
    <string name="cd_rank_sort_need">Sort by most need encouragement people</string>
    <string name="cd_send_message">Send message</string>
    <string name="cd_cancel_send">cancel send message</string>

    <string name="cd_like">Give one like</string>
    <string name="cd_create_meesage">Create a message</string>

    <string name="cd_havelike">Have like</string>

</resources>
