<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pom.poly.com.tabatatimer.LoginActivity">


    <TextView
        android:id="@+id/tvAppname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/loginPageText"
        android:textSize="@dimen/activity_login_loginpage_title" />

    <EditText
        android:id="@+id/edtUserID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableBottom="@color/loginPageText"
        android:ems="10"
        android:hint="@string/hint_emailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/loginPageText"
        android:textColorHint="@color/colorPrimaryLight" />

    <EditText
        android:id="@+id/edtPassW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/loginPageText"
        android:textColorHint="@color/colorPrimaryLight" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbtnbackground"
        android:text="@string/login"
        android:layout_marginTop="@dimen/activity_login_button_topmargin"
        android:textColor="@color/loginPageText"
        android:textSize="@dimen/activity_login_button_textSize" />

    <Button
        android:id="@+id/btVreate"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@drawable/loginbtnbackground"
        android:text="@string/create_ACC"
        android:visibility="invisible"
        android:textColor="@color/loginPageText"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/loginPageText"
        android:text="@string/sigup"
        android:id="@+id/tvSigup" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:textColor="@color/loginPageText"
        android:text="@string/noLogin_directuse"
        android:id="@+id/tvEnter" />

</LinearLayout>
