<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogFragment_finish_time"
            android:textSize="@dimen/fragment_dialogFragment__textsize" />

        <TextView
            android:id="@+id/tvfinish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fragment_dialogFragment__textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogFragment_total_time"
            android:textSize="@dimen/fragment_dialogFragment__textsize" />

        <TextView
            android:id="@+id/tvTotal_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fragment_dialogFragment__textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbtnbackground"
            android:text="@string/dialogFragment_button_cancel"
            android:textColor="@color/loginPageText"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btDialogSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/loginbtnbackground"
            android:text="@string/dialogFragment_button_save"
            android:textColor="@color/loginPageText"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>