<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context="pom.poly.com.tabatatimer.Fragment.TimerFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/timerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_pause"
            android:textSize="@dimen/pause_timer_size" />

        <TextView
            android:id="@+id/tvPauseTimer"
            style="@style/timerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_startnumber"
            android:textSize="@dimen/pause_timer_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/circle"/>

        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball1"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />
        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball2"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />
        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball3"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />
        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball4"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />
        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball5"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />
        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball6"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />
        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball7"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />
        <pom.poly.com.tabatatimer.View.myBallView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/ball8"
            app:offColor="@color/colorPrimaryLight"
            app:onColor="@color/colorAccent"
            android:padding="@dimen/ball_padding"
            android:layout_weight="1" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            style="@style/timerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_action"
            android:textSize="@dimen/action_timer_size" />

        <TextView
            android:id="@+id/tvActionTimer"
            style="@style/timerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_startnumber"
            android:textSize="@dimen/action_timer_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
